# ci20-os

./: .gitignore  CMakeLists.txt  Makefile  README.txt  bootloader.lds  build_combined_kernel.py  ci20board.c  ci20board.h  ddr.c  ddr.h  ddr.py  debug_uart.c  debug_uart.h  inttypes.h  linker.lds  main.c  memtest.c  mipsregs.h  peekpoke.S  peekpoke.h  pllclock.c  pllclock.h  referenceddr.py  stage1.S  stage1_main.c  start.S  timer.c  uart.c  uart.h  usbloader.py
architecture/mips32/: CMakeLists.txt  caches.c  caches_asm.S  exception.c  jump_to_sigma0.S  kernel_layout.c  kernelstack.c  start.S
driver/jz47xx-timer/: CMakeLists.txt  timer.c  timer_internal.h
driver/jz47xx-uart/: CMakeLists.txt  uart.c
include/: mipsregs.h  string.h  stringify.h  syscalls.h
include/architecture/mips32/: inttypes.h  stddef.h
include/architecture/mips32/architecture/: cpufunc.h  kernel_layout.h  kernelstack.h  mipsregs.h  peekpoke.h
include/driver/jz47xx-timer/: jz47xx-timer.h
include/kernel/: ci20board.h  soc.h
include/kernel/architecture/mips32/architecture/: cache.h  cp0.h  cpufunc.h  kernelstack.h  memory.h  peekpoke.h  userstate.h
include/kernel/driver/jz47xx-uart/: jz47xx-uart.h
include/kernel/soc/jz4780/: jz47xx-cache.h  jz47xx-cp0.h  jz47xx-devices.h  jz47xx-interrupts.h  jz47xx-ipi.h
include/kernel/system/ci20/include/system/: board.h
include/libci20/: timer.h
include/soc/jz4780/: init.h  jz47xx-cache.h  jz47xx-cgm.h  jz47xx-cp0.h  jz47xx-interrupts.h
include/soc/jz4780/include/soc/: config.h
include/system/: init.h
kernel/: CMakeLists.txt  build_combined_kernel.py  linker.lds  main.c  memcpy.c  memset.c  sigma0_interface.c  sigma0_interface.h  start.S
libci20/: CMakeLists.txt  init.c  init_basic.c  interrupts.c  pllclock.c  timer.c  timer_basic.c  timer_internal.h  uart.c
libci20/include/libci20/: init.h  interrupts.h  timer.h
ports/: baremetal.lds  baremetal.mk
sigma0/: .gitignore  CMakeLists.txt  gen_highest_vaddr.sh  kernel_interface.S  linker.lds  main.c  start.S
soc/jz4780/: CMakeLists.txt  init.c  interrupts.c  multicore.c  multicore_lowlevel.S
stage1/: CMakeLists.txt  ci20board.c  ddr.py  main.c  memtest.c  memtest.h  pllclock.c  stage1.S  stage1.lds  timer_basic.c  timer_basic.h
syscalls/: CMakeLists.txt  syscalls.S
system/ci20/: CMakeLists.txt  init.c
